# scout

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Makefile  README.md  delta-lake-investigation-20260624.md  delta-lake-investigation-notes-20260624.md  eslint.config.cjs  inventory.example.yaml  inventory.yaml  linting_java_checkstyle.xml  readthedocs.yaml  renovate.json5  stroke_research_cohort.csv
.claude/: settings.json
.claude/hooks/: block-phi-clusters.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  qa.md  task.md
.github/ci_resources/: inventory-staging.yaml  inventory.yaml  launch_extraction.sh  launch_temporal_extraction.sh  modality_mapping_codes.csv  test_config_template.json  tests-job.yaml
.github/scripts/: update-versions.sh
.github/workflows/: assign-author.yaml  ci.yaml  codeql.yml  copyright-year.yaml  dependency-review.yaml  gradle-dependency-submission.yaml  pr-status.yaml  release.yaml  renovate.yaml  security.yaml  test.yaml  test.yml
analytics/: metadata.yaml
analytics/charts/: Age_21.yaml  Count_1.yaml  Count_2.yaml  Facility_by_date_3.yaml  Facility_by_date_9.yaml  Modality_2.yaml  Modality_6.yaml  Race_4.yaml  Race_7.yaml  Report_4.yaml  Report_5.yaml  Service_Name_5.yaml  Service_Name_7.yaml  Sex_1.yaml  Sex_3.yaml  Study_Instance_UID_8.yaml
analytics/dashboards/: Scout_1.yaml
analytics/databases/: Scout_Data_Lake.yaml  Scout_Data_Lake.yaml.j2
analytics/mcp/: prompt.md  prompt_jupyter.md  prompt_rad_insights.md
analytics/superset/: metadata.yaml
ansible/: .gitignore  Makefile  README.md  REFACTORING.md  ansible.cfg  inventory.example.yaml
ansible/collections/: requirements.yaml
ansible/docs/: MOLECULE_TESTING.md
datasets-service/: .gitignore  Dockerfile  INTEGRATION.md  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/diagrams/: README.md  (+2 more)
explorer/: index.html  package-lock.json  package.json  vite.config.js
extractor/hl7-transformer/: .trivyignore.rego  .trivyignore.yaml  Dockerfile  modality_mapping_codes.csv  pyproject.toml
extractor/hl7-transformer/src/hl7scout/: db.py  healthapi.py  ingesthl7worker.py
extractor/hl7-transformer/src/hl7scout/activities/: ingesthl7.py
extractor/hl7-transformer/src/hl7scout/hl7extractor/: curatedtable.py  dataextraction.py  deltalake.py  derivativetable.py  diagnosistable.py  hl7reader.py  latesttable.py  mappingentry.py  mappingtable.py  mappingtableextractor.py  schemautils.py  sparkutils.py
extractor/hl7-transformer/tests/: conftest.py  test_base_merge.py  test_derive.py  test_hl7reader.py  test_import_activity.py  test_smoke.py  testutils.py
fakepacs/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  test_main.http  tox.ini
fakepacs/resources/: studies.json  study_metadata.json
fakepacs/tests/: test_main.py
helm/: temporal-java.values.yaml  temporal-python.values.yaml
helm/scout-notebook/scout-sdk/: pyproject.toml
helm/scout-notebook/scout-sdk/src/scout/: _identity.py  voila.py
hl7-listener/: Dockerfile  build.gradle  settings.gradle
hl7extractor/: LICENSE  pyproject.toml
hl7extractor/src/hl7extractor/: deltalake.py  hl7.py
keycloak/: .trivyignore.yaml  Dockerfile  VERSION
launchpad/: .env  .env.example  .trivyignore.yaml  Dockerfile  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts
launchpad-nextjs/: .dockerignore  next.config.ts  package.json  tailwind.config.ts
models/: README.md
orchestration/: README.md
orchestration/temporal-python/: Dockerfile  pyproject.toml
orchestration/temporal-python/src/temporalpy/: db.py  healthapi.py  ingesthl7worker.py
orchestration/temporal-python/src/temporalpy/activities/: ingesthl7.py
orchestration/temporal-python/src/temporalpy/hl7extractor/: deltalake.py  hl7.py
orchestration/temporal-python/src/temporalpy/otel/: config.py
orchestrator/: README.md
playbooks/: helm.yaml  k3s-cluster.yaml  k3s.yaml  orchestrator.yaml  traefik.yaml
report-viewer/: .dockerignore  .gitignore  Dockerfile  INTEGRATION.md  README.md  pyproject.toml  requirements.txt
report-viewer-service/: .dockerignore  .gitignore  Dockerfile  INTEGRATION.md  README.md  pyproject.toml
report-viewer/frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
report-viewer/frontend/src/: App.tsx  ChatPrompt.tsx  Modal.tsx  chat.ts  embed.ts  iframeHeight.ts  main.tsx  theme.css
report-viewer/frontend/src/api/: client.ts
report-viewer/frontend/src/pages/: SearchDetailPage.tsx  SearchesListPage.tsx
report-viewer/frontend/src/pages/searchDetail/: ExplainSqlModal.tsx  FiltersModal.tsx  RowDetail.tsx  SendToXnatModal.tsx  format.ts  styles.ts
report-viewer/notebooks/: negation-comparison.ipynb
report-viewer/src/scout_report_viewer/: __init__.py  __main__.py  app.py  auth.py  config.py  csv_upload.py  db.py  ids.py  jwks.py  logging_setup.py  metrics.py  models.py  store.py  trino_client.py  trino_rw_client.py
report-viewer/src/scout_report_viewer/migrations/: 0001__initial.sql
report-viewer/src/scout_report_viewer/routes/: __init__.py  config.py  owui_webhook.py  reports.py  searches.py
report-viewer/tests/: conftest.py  test_auth.py  test_filter_clause.py  test_health.py  test_jwt_auth.py  test_metrics.py  test_searches.py  test_trino_client.py  test_viewer.py
scout-xnat-auth-plugin/: README.md  build.gradle  settings.gradle
scout-xnatpy/: README.md  pyproject.toml  sample_xnat_notebook.ipynb
scripts/: scout-publish.sh  scout-unpublish.sh
terraform/: README.md  backend.tf  main.tf  providers.tf  variables.tf
tests/: build.gradle
verify-node/: .gitignore  README.md  config.example.json  pyproject.toml  verify_node.py
xnat/: README.md  openid-provider.properties  prefs-init.ini  xnat-values.yaml
xnat/scout-xnat-auth/: pyproject.toml  sample_xnat_notebook.ipynb
xnat/scout-xnat-auth/scout_xnat_auth/: __init__.py  client.py  errors.py  retry.py  token_providers.py
zap/: rules.conf
(+1534 files in other folders)
