[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hl7scout"
version = "0.0.dev0"
description = "Scout Extractor service to read, transform, and upload HL7 file contents to Lake"
authors = [
    {name = "John Flavin", email = "jflavin@wustl.edu"},
]
maintainers = [
    {name = "John Flavin", email = "jflavin@wustl.edu"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
requires-python = ">= 3.10"  # delta-spark 4.x requires 3.10
dependencies = [
    "delta-spark==4.2.0",
    "fastapi",
    "psycopg[binary]",
    "pyspark==4.1.1",
    "s3fs",
    "temporalio ~= 1.28.0",
    "trino",
    "uvicorn",
]
