[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hl7scout"
version = "0.0.dev0"
description = "Scout Extractor service to read, transform, and upload HL7 file contents to Lake"
authors = [
    {name = "John Flavin", email = "jflavin@wustl.edu"},
]
maintainers = [
    {name = "John Flavin", email = "jflavin@wustl.edu"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
requires-python = ">= 3.10"  # delta-spark 4.x requires 3.10
# Editing dependencies (or the test extra below) requires re-locking: run `uv lock` and
# commit uv.lock, or CI's `uv run --locked` fails. uv.lock feeds only the unit tests (CI
# + local); the runtime image installs from this file directly via `pip install .` (see
# Dockerfile), so bumps to the pinned Spark/Delta versions here drive both. Refresh
# transitive pins for CVEs with `uv lock --upgrade`.
dependencies = [
    "delta-spark==4.3.0",
    "fastapi",
    "psycopg[binary]",
    "pyspark==4.1.1",
    "s3fs",
    "temporalio ~= 1.29.0",
    "trino",
    "uvicorn",
]

[project.optional-dependencies]
# Unit-test deps only. Spark/Delta come from [project.dependencies] above so there is
# no second place to bump on a Spark upgrade.
test = [
    "pytest",
    "pytest-rerunfailures",
]
