[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "temporalpy"
version = "0.1.0"
description = "Scout temporal orchestrations in python"
authors = [
    {name = "John Flavin", email = "jflavin@wustl.edu"},
]
maintainers = [
    {name = "John Flavin", email = "jflavin@wustl.edu"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
requires-python = ">= 3.8"  # Lower limit is a guess
dependencies = [
    "delta-spark",
    "fastapi",
    "pyspark==3.5.4",
    "temporalio",
    "uvicorn",
]
