[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-sdk"
version = "0.1.0"
description = "Scout platform Python SDK for notebooks and playbooks"
requires-python = ">= 3.10"
dependencies = [
    "requests>=2.28",
    "sqlalchemy>=2",
    "trino>=0.330",
]

[project.optional-dependencies]
voila = [
    "jupyter-server>=2",
    "voila>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
